- Fixed bug #46918 (imap_rfc822_parse_adrlist host part not filled in correctly) [only in this branch]